Implementacao da configuracao da chamada ao banco de dados. Lembrar de configurar a questao de segurança.
